# randresnet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
experiments/: README.md  randresnet_configs.sh  resnet_configs.sh  test_randresnet.py  test_resnet.py
experiments/configs/: randresnet_configs.sh  resnet_configs.sh
src/: __init__.py
src/data/: __init__.py  data_utils.py  loaders.py  utils.py
src/models/: __init__.py  randresnet.py  resnet.py
src/models/layers/: __init__.py  _lambda_layer.py
src/networks/: init_utils.py  randresnet.py  resnet.py
src/training/: __init__.py  solver.py  solver_ridge.py  trainer.py  trainer_ridge.py
