[project]
name = "randresnet"
description = "Code for Randomized Residual Neural Networks"
authors = [
    {name="Matteo Pinna", email="nennomp@gmail.com"},
]
version = "0.1"
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [
    "codecarbon==2.8.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pre-commit",
    "ruff>=0.12.11",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.packages.find]
include = ["src*"]
